--- a/README
+++ b/README
@@ -1,10 +1,4 @@
 - 👋 Hi, I’m @Rociogarciadeo
-- 👀 I’m interested in connecting with different software developers
-- 🌱 I’m currently learning ...
-- 💞️ I’m looking to collaborate on future opportunities
-- 📫 How to reach me +44 7311322922 or LinkedIn: /rociogarciadeo
-
-<!---
-Rociogarciadeo/Rociogarciadeo is a ✨ special ✨ repository because its `README.md` (this file) appears on your GitHub profile.
-You can click the Preview link to take a look at your changes.
---->
+- 👀 I’m interested in connecting with different software developers across the world. 
+- 💞️ I’m looking to connect with enthusiastic developers looking for a career opportunity! 
+- 📫 You can reach me at +44 7311322922 or LinkedIn: /rociogarciadeo
